In ingressrouter use regexp to match host subdomains

--- a/chart/dzervit/templates/ingressroute.yaml
+++ b/chart/dzervit/templates/ingressroute.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   routes:
     - kind: Rule
-      match: Host(`{{ .Values.ingressroute.host }}`) || Host(`*.{{ .Values.ingressroute.host }}`)
+      match: Host(`{{ .Values.ingressroute.host }}`) || HostRegexp(`{subdomain:.+}.{{ .Values.ingressroute.host }}`)
       services:
         - kind: Service
           name: dzervit-svc
