--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,11 @@ jobs:
           namespace: dzervit
           helm: helm3
           values: >-
-            ingressroute:
-              host: dzerv.it
-              certResolver: cloudflare
+            ingress:
+              annotations:
+                kubernetes.io/ingress.class: nginx
+                nginx.ingress.kubernetes.io/ssl-redirect: "true"
+                cert-manager.io/cluster-issuer: letsencrypt
           chart: 'chart/dzervit'
         env:
           KUBECONFIG_FILE: '${{ secrets.KUBECONFIG_PROD }}'
