--- a/chart/dzervit/values.yaml
+++ b/chart/dzervit/values.yaml
@@ -1,4 +1,9 @@
-ingressroute:
+ingress:
   enabled: true
-  host: dzerv.it
-  certResolver:
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    cert-manager.io/cluster-issuer: letsencrypt
+  hosts:
+    - dzerv.it
+    - "*.dzerv.it"
