--- a/chart/dzervit/templates/ingress.yaml
+++ b/chart/dzervit/templates/ingress.yaml
@@ -3,14 +3,13 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  annotations:
-    {{ .Values.ingress.annotations | toYaml | indent 4 }}
+  annotations: {{ .Values.ingress.annotations | toJson }}
   name: dzervit-ingress
   namespace: dzervit
 spec:
   rules:
-    {{- range $host := until(.Values.ingress.hosts) -}}
-    - host: "{{ $host }}"
+    {{- range .Values.ingress.hosts }}
+    - host: "{{ . }}"
       http:
         paths:
           - path: /
@@ -20,7 +19,7 @@ spec:
                 name: dzervit-svc
                 port:
                   number: 8000
-    {{- end -}}
+    {{- end }}
 
   tls:
     - hosts: {{ .Values.ingress.hosts | toJson }}
