--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: 'Helm install'
-        uses: 'deliverybot/helm@v1'
+        uses: glopezep/helm@v1.7.1
         with:
           release: dzervit
           token: '${{ github.token }}'
