--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,11 @@ authors = ["Dimitris Zervas <dzervas@dzervas.gr>"]
 edition = "2018"
 
 [dependencies]
-rocket = "0.4.11"
-rocket_contrib = "0.4.11"
+actix-files = "0.6.2"
+actix-web = { version = "4.3.1", features = ["rustls"] }
 serde = { version = "1.0.166", features = ["derive"] }
 
 [dev-dependencies]
+actix-rt = "2.8.0"
+actix-test = { version = "0.1.1", features = ["rustls"] }
 serde_json = "1.0.99"
